--- a/ProjectUbuild/Views/Home/Index.cshtml
+++ b/ProjectUbuild/Views/Home/Index.cshtml
@@ -57,7 +57,7 @@
                         @*<p class="lead mb40">
                             Slider 3
                         </p>*@
-                        <a class="btn btn-lg btn-filled" href="#">Apply now</a>
+                        <a class="btn btn-lg btn-filled" href="/fullhouse/index">Apply now</a>
                     </div>
                 </div>
                 <!--end of row-->
@@ -95,7 +95,7 @@
                         @*<p class="lead mb40">
                             Slider 3
                         </p>*@
-                        <a class="btn btn-lg btn-filled" href="#">Start Exploring</a>
+                        <a class="btn btn-lg btn-filled" href="/fullhouse/index">Start Exploring</a>
                     </div>
                 </div>
                 <!--end of row-->
@@ -114,7 +114,7 @@
                         @*<p class="lead mb40">
                             Slider 3
                         </p>*@
-                        <a class="btn btn-lg btn-filled" href="#">Start Exploring</a>
+                        <a class="btn btn-lg btn-filled" href="/fullhouse/index">Start Exploring</a>
                     </div>
                 </div>
                 <!--end of row-->
@@ -133,7 +133,7 @@
                         @*<p class="lead mb40">
                             Slider 3
                         </p>*@
-                        <a class="btn btn-lg btn-filled" href="#">Start Now</a>
+                        <a class="btn btn-lg btn-filled" href="/fullhouse/index">Start Now</a>
                     </div>
                 </div>
                 <!--end of row-->
@@ -171,7 +171,7 @@
                         @*<p class="lead mb40">
                             Slider 3
                         </p>*@
-                        <a class="btn btn-lg btn-filled" href="#">Start Exploring</a>
+                        <a class="btn btn-lg btn-filled" href="/fullhouse/index">Start Exploring</a>
                     </div>
                 </div>
                 <!--end of row-->
