--- a/ProjectUbuild/Views/Shared/_Scripts.cshtml
+++ b/ProjectUbuild/Views/Shared/_Scripts.cshtml
@@ -82,7 +82,7 @@
 {
     <script src="~/Scripts/app/eligibility.controller.js"></script>
 }
-else if (route == "/profile/index")
+else if (route.IndexOf("/profile", StringComparison.Ordinal) > -1)
 {
 
     <script src="~/Scripts/app/update-profile.conftroller.js"></script>
