--- a/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
+++ b/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
@@ -36,8 +36,7 @@
                 <div class="panel panel-danger">
                     <div class="panel-body">
                         <div class="col-md-12" style="height: 530px">
-                            <img src="/images/1.jpeg" class="img-responsive img-rounded" alt="Cinque Terre"
-                                 style="width: 50%; height: auto;transform: rotate(90deg) translateY(-177px) translateX(-185px)">
+                            <img src="~/images/HouseImages/@Model.DesignImage" class="img-responsive img-rounded" alt="Cinque Terre">
                         </div>
                     </div>
                     <div class="panel-footer">
@@ -47,7 +46,7 @@
                                     <div class="col-md-3">
                                         <div class="form-group form-group-default form-group-default-select2 " style="height: 60px">
                                             <label class="">Customizable Items List</label>
-                                            <select class="full-width select2-hidden-accessible" data-placeholder="Select Item" data-init-plugin="select2" tabindex="-1" aria-hidden="true" data-ng-options="item as item.ItemDescription for item in vm.customizables" data-ng-model="vm.model.selectedCustomizable">
+                                            <select class="full-width select2-hidden-accessible" data-placeholder="Select Item" data-init-plugin="select2" tabindex="-1" aria-hidden="true" data-ng-options="item as item.ItemDescription for item in vm.customizables" data-ng-model="vm.model.selectedCustomizable" data-ng-change="vm.getFixturesForCustomizable(vm.model.selectedCustomizable)">
                                                 <option value="">Select Customizable..</option>
                                             </select>
                                             <span class="select2 select2-container select2-container--default select2-container--below select2-container--focus" dir="ltr" style="width: 334px;">
@@ -60,10 +59,8 @@
                                         </div>
                                     </div>
                                     <div class="col-md-9" style="max-height: 310px; overflow: auto;">
-                                        <select class="image-picker show-html">
-                                            <option data-ng-repeat="ff in vvm.fixtureFittings" data-img-src="/images/1.jpeg" data-img-alt="Page 1" value="1" data-ng-click="vm.fixtureSelected(ff)">{{ff.ItemDescription}}</option>
-
-                                             
+                                        <select class="image-picker show-html" data-ng-model="vm.model.selectedFixture" >
+                                            <option data-ng-repeat="ff in vm.customizableFixtureFittings" data-img-src="/images/FixturesImages/{{ff.ItemImage}}" data-img-alt="{{ff.ItemDescription}}" value="{{ff.RecordId}}" ></option>
                                         </select>
                                     </div>
                                 </div>
@@ -89,68 +86,33 @@
                                 <th>&nbsp;</th>
                                 <th>Item</th>
                                 <th>Quantity</th>
-                                <th>Price</th>
+                                <th>Unit Cost</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr data-ng-repeat="(key, value) in vm.model.selectedFixtures">
                                 <th scope="row">
-                                    <a href="#" class="remove-item" data-toggle="tooltip" data-placement="top" title="" data-original-title="Remove from cart" data-ng-click="vm.deleteFixture(value.RecordId)">
+                                    <button type="button" class="remove-item" data-toggle="tooltip" data-placement="top" title="" data-original-title="Remove from cart" data-ng-click="vm.deleteFixture(value.RecordId)">
                                         <i class="ti-close"></i>
-                                    </a>
+                                    </button>
                                 </th>
                                 <td>
                                     <a href="#">
-                                        <img alt="Product" class="product-thumb" src="/images/{{value.ItemImage}}" style="width: 90%" />
+                                        <img alt="{{value.ItemDescription}}" class="product-thumb" src="/images/FixturesImages/{{value.ItemImage}}" style="width: 90%" />
                                     </a>
                                 </td>
                                 <td>
-                                    <span>1</span>
+                                    <span data-ng-bind="value.ItemCount">1</span>
                                 </td>
                                 <td>
-                                    <span data-ng-bind="item.UnitCost | currency:'GHS'"></span>
+                                    <span data-ng-bind="value.UnitCost | currency:'GHS'"></span>
                                 </td>
                             </tr>
-                            <tr>
-                                <th scope="row">
-                                    <a href="#" class="remove-item" data-toggle="tooltip" data-placement="top" title="" data-original-title="Remove from cart">
-                                        <i class="ti-close"></i>
-                                    </a>
-                                </th>
-                                <td>
-                                    <a href="#">
-                                        <img alt="Product" class="product-thumb" src="/images/saple.jpg" style="width: 90%" />
-                                    </a>
-                                </td>
-                                <td>
-                                    <span>1</span>
-                                </td>
-                                <td>
-                                    <span>$49.95</span>
-                                </td>
-                            </tr>
-                            <tr>
-                                <th scope="row">
-                                    <a href="#" class="remove-item" data-toggle="tooltip" data-placement="top" title="" data-original-title="Remove from cart">
-                                        <i class="ti-close"></i>
-                                    </a>
-                                </th>
-                                <td>
-                                    <a href="#">
-                                        <img alt="Product" class="product-thumb" src="/images/saple.jpg" style="width: 90%" />
-                                    </a>
-                                </td>
-                                <td>
-                                    <span>1</span>
-                                </td>
-                                <td>
-                                    <span>$49.95</span>
-                                </td>
-                            </tr>
+                            
                         </tbody>
                     </table> 
                     <form>
-                        <p>You may be elligible for a loan to own this house. </p>
+                        <h4>You may be elligible for a loan to own this house. </h4>
                         <div class="form-group form-group-default input-group">
                             <label for="houseEligibility" class="ng-binding">Please enter Loan Tenure.</label>
                             <select data-ng-model="vm.model.tenure" id="loanTenure" placeholder="Loan Tenure" class="form-control ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched" style="">
