--- a/ProjectUbuild/Views/Account/Register.cshtml
+++ b/ProjectUbuild/Views/Account/Register.cshtml
@@ -6,7 +6,7 @@
 }
 
 
-<section class="cover fullscreen image-bg overlay">
+<section class="cover fullscreen image-bg overlay" style="height: auto">
     <div class="background-image-holder">
         <img alt="image" class="background-image" src="~/assets/foundry/img/register.jpg" />
     </div>
