--- a/ProjectUbuild/Views/Profile/Index.cshtml
+++ b/ProjectUbuild/Views/Profile/Index.cshtml
@@ -523,7 +523,7 @@
                         </div>
                         <input type="button" name="previous" class="msformprevious action-button" value="Previous" />
 
-                        <input type="submit" name="previous" style="width: 200px" class="action-button" value="Submit" />
+                        <input type="submit" name="previous" style="width: 200px"  value="Submit" />
                     </fieldset>
                 </form>
             </div>
