--- a/ProjectUbuild/Views/Shared/_Layout.cshtml
+++ b/ProjectUbuild/Views/Shared/_Layout.cshtml
@@ -25,12 +25,43 @@
 
                     @if (Request.IsAuthenticated)
                     { 
-                        <span>Welcome @User.Identity.Name </span>
+                        @*<span>Welcome @User.Identity.Name </span>
                         using (Html.BeginForm("Logoff", "Account", FormMethod.Post, new { style = "display:inline-block" }))
                         {
                             @Html.AntiForgeryToken()
                             <input type="submit" value="Logout" class="btn btn-sm btn-filled" style="height: 28px;line-height: 28px" />
-                        }
+                        }*@
+
+                        <div class="d-flex align-items-center">
+                            <!-- START User Info-->
+                            <div class="pull-left p-r-10 fs-14 font-heading hidden-md-down">
+                                <span class="semi-bold">David</span> <span class="text-master">Nest</span>
+                            </div>
+                            <div class="dropdown pull-right hidden-md-down">
+                                <button class="profile-dropdown-toggle" type="button" style="padding-top: 5px" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <span class="fa fa-user-circle fa-2x"></span>
+                                </button>
+                                <div class="dropdown-menu dropdown-menu-right profile-dropdown" role="menu">
+                                    @*<a href="#" class="dropdown-item"><i class="pg-settings_small"></i> Settings</a>*@
+                                    <a href="@Url.Action("Index","Profile")" class="dropdown-item"><i class="pg-outdent"></i> My Profile</a>
+                                   
+                                    @*<a href="#" class="dropdown-item"><i class="pg-signals"></i> Help</a>*@
+                                    
+                                    @using (Html.BeginForm("Logoff", "Account", FormMethod.Post, new { style = "display:inline-block" }))
+                                    {
+                                    @Html.AntiForgeryToken()
+                                        <button type="submit" value="Logout" class="clearfix bg-master-lighter dropdown-item" style="height: 28px;line-height: 28px">
+                                            <span class="pull-left">Logout</span>
+                                            <span class="pull-right"><i class="pg-power"></i></span>
+                                        </button>
+                                    }
+
+                           
+                                </div>
+                            </div>
+                            <!-- END User Info-->
+                            
+                        </div>
                     }
                     else
                     {
@@ -82,7 +113,9 @@
                 <div class="module-group right">
                     <div class="module left">
                         <ul class="menu">
-
+                            <li>
+                                @Html.ActionLink("Get Started", "Index", "FullHouse", null, new { })
+                            </li>
                             <li>
                                 @Html.ActionLink("uBuild", "About", "Home", null, new { })
                             </li>
@@ -91,9 +124,7 @@
                                 <li>
                                     @Html.ActionLink("My Applications", "MyApplications", "Home", null, new {})
                                 </li>
-                                <li>
-                                    @Html.ActionLink("Register", "Index", "Profile", null, new { })
-                                </li>
+                               
                             }
                             <li>
                                 @Html.ActionLink("Guidelines", "Guidelines", "Home", null, new { })
