--- a/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
+++ b/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
@@ -12,7 +12,7 @@
     <div class="container-fluid">
         <div class="row" style="margin-top: 33px">
             <div class="col-md-6">
-                <h2 class="uppercase mb8" style="font-size:25px;line-height:25px">Home Design</h2>
+                <h2 class="uppercase mb8" style="font-size:25px;line-height:25px">House Customization</h2>
                 <p class="lead mb0">You can customize your chosen home . </p>
             </div>
             <div class="col-md-6 text-right hidden-xs hidden-sm">
@@ -80,7 +80,7 @@
             <div class="panel panel-success">
                 <div class="panel-heading">
                     <h3>Base house cost + Customizations</h3>
-                    <h3><span data-ng-bind="vm.model.houseCostCurrency"></span> <span data-ng-bind="vm.model.houseCost"></span></h3>
+                    <h3>= <span data-ng-bind="vm.model.houseCostCurrency"></span> <span data-ng-bind="vm.model.houseCost"></span></h3>
                 </div>
                 <div class="panel-body">
                     <table class="table cart mb48">
@@ -126,7 +126,7 @@
                         <div class="form-group form-group-default input-group">
                             <label for="houseEligibility" class="ng-binding">Please enter your monthly.</label>
                             <input autocomplete="off" data-ng-model="vm.model.income" id="houseEligibility" placeholder="Monthly Income here" type="Text" class="form-control ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched" style="">
-                            <span class="input-group-addon primary p-r-15 p-l-15" style="cursor: pointer;background: #ac5e81" data-ng-click="vm.checkEligibility()">
+                            <span ng-show="vm.model.tenure && vm.model.income" class="input-group-addon primary p-r-15 p-l-15" style="cursor: pointer;background: #ac5e81" data-ng-click="vm.checkEligibility()">
                                 Submit
                             </span>
                         </div>
