--- a/ProjectUbuild/Views/FullHouse/Index.cshtml
+++ b/ProjectUbuild/Views/FullHouse/Index.cshtml
@@ -12,7 +12,7 @@
     <div class="container-fluid">
         <div class="row" style="margin-top: 33px">
             <div class="col-md-6">
-                <h2 class="uppercase mb8" style="font-size:25px;line-height:25px">Home Design</h2>
+                <h2 class="uppercase mb8" style="font-size:25px;line-height:25px">Choose your home</h2>
                 <p class="lead mb0">Choose the house of your choice </p>
             </div>
             <div class="col-md-6 text-right hidden-xs hidden-sm">
