--- a/ProjectUbuild/assets/plugins/image-picker/image-picker.css
+++ b/ProjectUbuild/assets/plugins/image-picker/image-picker.css
@@ -47,7 +47,7 @@ ul.thumbnails.image_picker_selector {
             }
 
             ul.thumbnails.image_picker_selector li .thumbnail.selected {
-                background: #0088cc;
+                background: #9d2033cf;
             }
 .image_picker_image {
 
