--- a/ProjectUbuild/Views/Shared/_Layout.cshtml
+++ b/ProjectUbuild/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                         <div class="d-flex align-items-center">
                             <!-- START User Info-->
                             <div class="pull-left p-r-10 fs-14 font-heading hidden-md-down">
-                                <span class="semi-bold">David</span> <span class="text-master">Nest</span>
+                                <span class="semi-bold">@User.Identity.Name</span>
                             </div>
                             <div class="dropdown pull-right hidden-md-down">
                                 <button class="profile-dropdown-toggle" type="button" style="padding-top: 5px" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
