--- a/ProjectUbuild/Views/Shared/_Layout.cshtml
+++ b/ProjectUbuild/Views/Shared/_Layout.cshtml
@@ -11,10 +11,10 @@
         <a id="top"></a>
         <nav class="">
             <div class="nav-utility">
-                <div class="module left">
-                    <i class="fa fa-phone">&nbsp;</i>
+                <div class="module left hidden-xs">
+                    <i class="fa fa-phone ">&nbsp;</i>
                     <span class="sub">Call Us Now : (+233) 0274121780</span>
-                    <i class="ti-email hidden-xs">&nbsp;</i>
+                    <i class="ti-email ">&nbsp;</i>
                     <span class="sub hidden-xs">info@ubuild.ghlbank.com</span>
                 </div>
                 @*<div class="module left hidden-sm hidden-xs">
@@ -74,7 +74,7 @@
 
                 </div>
             </div>
-            <div class="nav-bar">
+            <div class="nav-bar" style="width: 100%">
                 <div class="module left">
                     <a href="/">
                         <svg style="width:76px;height:50px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 200">
