page title fixes

--- a/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
+++ b/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
@@ -1,5 +1,6 @@
 ﻿@model uBuildCore.Models.HouseDesigns
 @{
+    ViewBag.Title = "Customize your house";
     Layout = "../Shared/_Layout.cshtml";
 }
 <input type="hidden" id="__selected_house_id" value="@Model.RecordId" />
