--- a/ProjectUbuild/Views/FullHouse/Index.cshtml
+++ b/ProjectUbuild/Views/FullHouse/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ProjectUbuild.Models.HouseDesignsModel
 
 @{
-    ViewBag.Title = "title";
+    ViewBag.Title = "House selection";
     Layout = "../Shared/_Layout.cshtml";
 }
   
