--- a/ProjectUbuild/Views/Shared/_Layout.cshtml
+++ b/ProjectUbuild/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="ubuild">
 <head>
     <meta charset="utf-8">
-    <title>uBuild - </title>
+    <title>uBuild - @ViewBag.Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     @Html.Partial("_Head")
 </head>
