--- a/ProjectUbuild/Views/Home/FaQs.cshtml
+++ b/ProjectUbuild/Views/Home/FaQs.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "FaQs";
+    ViewBag.Title = "Frequently asked questions. ";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
