--- a/ProjectUbuild/Views/Shared/_Scripts.cshtml
+++ b/ProjectUbuild/Views/Shared/_Scripts.cshtml
@@ -40,6 +40,12 @@
 <script src="~/assets/plugins/jquery-sparkline/jquery.sparkline.min.js" type="text/javascript"></script>
 <script src="~/assets/plugins/skycons/skycons.js" type="text/javascript"></script>
 <script src="~/assets/plugins/bootstrap-datepicker/js/bootstrap-datepicker.js" type="text/javascript"></script>
+<script src="~/assets/plugins/bootstrap-daterangepicker/daterangepicker.js"></script>
+<script src="~/assets/plugins/bootstrap-timepicker/bootstrap-timepicker.min.js"></script>
+<script type="text/javascript" src="~/assets/plugins/jquery-autonumeric/autoNumeric.js"></script>
+<script type="text/javascript" src="~/assets/plugins/dropzone/dropzone.min.js"></script>
+<script type="text/javascript" src="~/assets/plugins/bootstrap-tag/bootstrap-tagsinput.min.js"></script>
+<script type="text/javascript" src="~/assets/plugins/jquery-inputmask/jquery.inputmask.min.js"></script>
 <script src="~/assets/plugins/bootstrap-typehead/typeahead.bundle.min.js"></script>
 <script src="~/assets/plugins/bootstrap-typehead/typeahead.jquery.min.js"></script>
 <script src="~/assets/plugins/handlebars/handlebars-v4.0.5.js"></script>
@@ -68,6 +74,7 @@
 <script src="~/assets/plugins/image-picker/image-picker.min.js"></script>
 <script src="~/assets/js/Controllers/index.js"></script>
 <script src="~/assets/js/form_wizard.js"></script>
+<script src="~/assets/js/form_elements.js"></script>
 <!-- END CORE TEMPLATE JS -->
 <!-- BEGIN PAGE LEVEL JS -->
 
