--- a/ProjectUbuild/assets/foundry/css/custom.css
+++ b/ProjectUbuild/assets/foundry/css/custom.css
@@ -728,3 +728,14 @@ svg:not(:root) {
 .rh_prop_card__priceLabel h4{
     margin-bottom: 10px
 }
+
+input[type="text"], input[type="password"] {
+    background: #f5f5f5;
+    border: none;
+    width: 100%;
+    height: 50px;
+    padding-left: 20px;
+    font-weight: 500;
+     margin-bottom: 0; 
+    border-radius: 0;
+}
